Add tags on routes documentation
