# src/Controller/StatsController.php
@@ -45,6 +45,7 @@ class StatsController extends AbstractCustomController
      * @return JsonResponse
      * @OA\Post(
      *  path="/stats/kerry",
+     *  tags={"Statistiques"},
      *  @OA\Response(
      *      response="200",
      *      description="Liste de CA triés par type et par conseillers",
@@ -151,6 +152,7 @@ class StatsController extends AbstractCustomController
      * @return JsonResponse
      * @OA\Post(
      *  path="/stats/kerry-withoutid",
+     *  tags={"Statistiques"},
      *  @OA\Response(
      *      response="200",
      *      description="Liste de CA triés par type et par conseillers dans le cas où le conseiller n'a pas d'ID Datalake renseigné dans Numm",
@@ -256,6 +258,7 @@ class StatsController extends AbstractCustomController
      * @return JsonResponse
      * @OA\Post(
      *  path="/stats/analyticCompta",
+     *  tags={"Statistiques", "Analytique", "BU"},
      *  @OA\Response(
      *      response="200",
      *      description="Liste de données analytiques par BU et par catégorie",
